styles.css
/* imports */
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');

/* shared styles */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: 'Work Sans', sans-serif;
}

.primary-color {
    color: #FF42A5;
}

/* navbar styles */
.nav-container {
    display: flex;
    /* justify-content: space-around; */
    /* align-items: center; */
    margin: 1rem 10%;
}
.nav-left {
    /* width: 50%; */
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 20px;
}
.nav-left, .nav-right {
    /* border: 2px solid black; */
    width: 50%;
}

.nav-right {
    display: flex;   
    align-items: center;
    justify-content: flex-start;
}
.nav-left > img {
    width: 5.5rem;
    height: 2.5rem;
    object-fit: cover;
}

.nav-title {
    text-align: center;
    font-size: 45px;
    font-weight: 700;
}

.nav-right ul{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 32px;
}
.nav-right li{
    list-style: none;
    color: #3C354F;
    text-align: center;
    font-size: 18px;
    font-weight: 500;
}

.follow-us {
    border-radius: 8px;
    background: rgba(11, 2, 35, 0.10);
    width: 16.2rem;
    height: 3.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* banner styles */
.banner-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4.25rem;
}

.banner-left {
    background-image: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    /* border: 2px solid red; */
    width: 40vw;
    height: 60vh;
    gap: 20px;
    /* height: auto; */
}

.banner-head {
    color: #0B0223;
    /* text-align: left; */
    font-size: 48px;
    font-weight: 600;
}

.banner-title {
    /* text-align: left; */
    font-size: 95px;
    font-weight: 800;
    background-image: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
    color: transparent;
    -webkit-background-clip: text;
}

.banner-text {
    /* border: 3px solid red; */
    /* text-align: left; */
    color: #534C64;
    font-size: 20px;
    font-weight: 500;
}

.btn-primary {
    color: #FFF;
    font-size: 20px;
    font-weight: 600;
    padding: 21px 40px;
    border-radius: 48px;
    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
}

.btn-secondary {
    color: #FFF;
    font-size: 20px;
    font-weight: 600;
    padding: 21px 40px;
    border-radius: 48px;
    background: #4EC5F7;
}

